# CPP

./: .gitignore  CMakeLists.txt  geo.h  main.cpp  mtest.cpp  poly.cpp  poly.h  test.cpp  text.txt
src/: cube.h  main.cpp  solver.h
